--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ after_success: |
     git -c user.name='travis' -c user.email='travis' commit -m init
     # Make sure to make the output quiet, or else the API token will leak!
     # This works because the API key can replace your password.
-    git push -f -q https://<me>:$GITHUB_API_KEY@github.com/<me>/<myrepo>-gh-pages gh-pages &2>/dev/null
+    git push -f -q https://aloata:$GITHUB_API_KEY@github.com/aloata/fl1-gh-pages gh-pages &2>/dev/null
     cd "$TRAVIS_BUILD_DIR"
   fi
 
