--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ jdk: [oraclejdk8]
 deploy:
   provider: releases
   api_key: ${api_key}
-  file: "build/libs/FastLogin1_.jar"
+  file: "FastLogin1_.jar"
   skip_cleanup: true
   on:
+    repo: aloata/fl1
     all_branches: true
     tags: true
