--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jdk: [oraclejdk8]
 
 deploy:
   provider: releases
-  api_key: ${api_key}
+  api_key: ${GITHUB_API_KEY}
   file: "FastLogin1_.jar"
   skip_cleanup: true
   on:
