--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,5 @@ jdk: [oraclejdk8]
 deploy:
   provider: releases
   api_key: ${GITHUB_API_KEY}
-  file: "FastLogin.jar"
+  file: "build/libs/Project.jar"
   skip_cleanup: true
-  on:
-    repo: aloata/fl1
