--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ script: mvn compile test
 # We run on 8
 jdk: [oraclejdk8]
 
+before_deploy:
+  - export RELEASE_JAR_FILE=$(ls build/libs/*.jar)
+  - echo "Deploying $RELEASE_JAR_FILE to GitHub"
+  
 deploy:
   provider: releases
   api_key: ${GITHUB_API_KEY}
