--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,15 @@ sudo: false
 # This is a java project
 language: java
 
-script: mvn compile test
-
 # We run on 8
 jdk: [oraclejdk8]
 
 before_deploy:
   - export RELEASE_JAR_FILE=$(ls build/libs/*.jar)
-  - echo "Deploying $RELEASE_JAR_FILE to GitHub"
+  - echo "Deploying-> $RELEASE_JAR_FILE to GitHub"
   
 deploy:
   provider: releases
   api_key: ${GITHUB_API_KEY}
-  file: "build/libs/Project.jar"
+  file: ${RELEASE_JAR_FILE}
   skip_cleanup: true
